tests/rosetta/out/Swift/catalan-numbers-pascals-triangle.error
run error: exit status 1
/tmp/TestMochiToSwiftcatalan-numbers-pascals-triangle2587125659/001/main.swift:3:16: error: cannot assign value of type '[Any]' to type '[Int]'
 1 | // Generated by Mochi compiler v0.10.26 on 2025-07-16T09:56:34Z
 2 | let n = 15
 3 | var t: [Int] = [Any]()
   |                |- error: cannot assign value of type '[Any]' to type '[Int]'
   |                `- note: arguments to generic parameter 'Element' ('Any' and 'Int') are expected to be equal
 4 | for _ in 0..<(n + 2) {
 5 |     t = t + [0]
