tests/rosetta/out/Swift/catalan-numbers-pascals-triangle.swift
// Generated by Mochi compiler v0.10.26 on 2025-07-16T09:56:34Z
let n = 15
var t: [Int] = [Any]()
for _ in 0..<(n + 2) {
    t = t + [0]
}
t[1] = 1
for i in 1..<(n + 1) {
    var j = i
    while j > 1 {
        t[j] = t[j] + t[j - 1]
        j = j - 1
    }
    t[i + 1] = t[i]
    j = i + 1
    while j > 1 {
        t[j] = t[j] + t[j - 1]
        j = j - 1
    }
    let cat = t[i + 1] - t[i]
    if i < 10 {
        print(" " + String(i) + " : " + String(cat))
    }
    else {
        print(String(i) + " : " + String(cat))
    }
}
